--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -21,6 +21,11 @@
   justify-content: center;
 }
 
+.my-tooltip-arrow {
+  width: 18px !important;
+  height: 18px !important;
+}
+
 .toolbar {
   display: flex;
   align-items: center;
